# kily-agent

./: .dockerignore  .gitignore  Dockerfile.backend  MVP_OVERVIEW.md  Makefile  README.md  advanced_qna_agent.py  app.py  app_deploy.py  docker-compose.yml  docker.env.example  env.example  pyproject.toml  qna_agent.py  requirements.txt  start-all.sh  stop-all.sh  test_context.py  test_context_debug.py  test_context_detailed.py
.cursor/: Dockerfile
.cursor/rules/: coding-rules.mdc
backend/: api_client.py  server.py
backend/agents/: qna_agent.py
backend/managers/: context_manager.py  session_manager.py
backend/utils/: conversation_logger.py  logging_config.py  prompt_manager.py  voice_service.py
data/: README.md
data_service/: Dockerfile  README.md  chat_storage.py  models.py  pyproject.toml  server.py  server_hardcoded.py  start_server.py
data_service/chat_data/: messages.json  sessions.json
database/: config.py
frontend/: app.py
frontend-react/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js
frontend-react/public/: index.html
frontend-react/src/: App.js
frontend-react/src/components/: ChatHistory.js  ChatInterface.js  Header.js  MarkdownRenderer.js  ProfileList.js  Sidebar.js  VoiceInput.js  VoiceOutput.js
mock_api/: README.md  database.py  pyproject.toml  server.py  start_server.py
prompts/: README.md  analysis_code_generation.txt  conversational_query_context.txt  conversational_response.txt  execution_history_context.txt
sample_data/: customers.csv  feedback.csv  financial.csv  products.csv  purchases.csv  regions.csv  sales.csv  support.csv
scripts/: add_sample_data.py  create_sample_csv_files.py  demo_logging.py  setup_react_frontend.py  setup_uv.py  start_frontend_with_logging.py  test_voice_service.py
tests/: README.md  __init__.py  conftest.py  demo.py  example_usage.py  run_tests.py  test_agent.py  test_backend.py  test_backend_voice.py  test_basic.py  test_data_service.py  test_database.py  test_frontend.py  test_frontend_integration.py  test_frontend_voice.py  test_integration.py  test_llm_analysis.py  test_load_functionality.py  test_mock_api.py  test_rest_api.py  test_socketio_chat.py  test_voice_service.py
v1/: README.md  env.example  requirements.txt
v1/backend/: server.py
v1/backend/agents/: qna_agent.py
v1/backend/managers/: context_manager.py  session_manager.py
v1/database/: config.py  schema.sql
v1/frontend/: app.py
v1/scripts/: start_backend.py  start_frontend.py
